--- a/src/public/index.css
+++ b/src/public/index.css
@@ -1,5 +1,5 @@
 body{
-   background: url('./imagenes/bg-angry.jpg') no-repeat;
+   background: url('./imagenes/bg-sasuke.jpg') no-repeat;
     background-size: cover;
 }
 
